feature: support delete key everywhere

--- a/src/Views/BranchTree.axaml
+++ b/src/Views/BranchTree.axaml
@@ -13,6 +13,7 @@
            ItemsSource="{Binding #ThisControl.Rows}"
            SelectionMode="Multiple"
            SelectionChanged="OnNodesSelectionChanged"
+           KeyDown="OnListKeyDown"
            ContextRequested="OnTreeContextRequested">
     <ListBox.ItemsPanel>
       <ItemsPanelTemplate>
