--- a/src/Views/AssumeUnchangedManager.axaml
+++ b/src/Views/AssumeUnchangedManager.axaml
@@ -66,7 +66,7 @@
             <Grid Height="26" ColumnDefinitions="26,*,30">
               <Path Grid.Column="0" Width="14" Height="14" Margin="8,0,0,0" HorizontalAlignment="Center" Data="{StaticResource Icons.File}"/>
               <Border Grid.Column="1" Margin="4,0" ClipToBounds="True">
-                <TextBlock Grid.Column="1" Text="{Binding}" HorizontalAlignment="Left"/>
+                <TextBlock Text="{Binding}" HorizontalAlignment="Left"/>
               </Border>
               <Button Grid.Column="2" Classes="icon_button" Click="OnRemoveButtonClicked">
                 <Path Width="14" Height="14" Data="{StaticResource Icons.Clear}"/>
