ux: show stash message as tooltip when hovering it (#1419)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/StashesPage.axaml
+++ b/src/Views/StashesPage.axaml
@@ -84,7 +84,11 @@
 
         <ListBox.ItemTemplate>
           <DataTemplate DataType="m:Stash">
-            <Border BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="0,0,0,1" Padding="4" Background="Transparent" ContextRequested="OnStashContextRequested">
+            <Border Background="Transparent"
+                    BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="0,0,0,1"
+                    Padding="4"
+                    ContextRequested="OnStashContextRequested"
+                    ToolTip.Tip="{Binding Message}">
               <Grid RowDefinitions="Auto,*" >
                 <Grid Grid.Row="0" ColumnDefinitions="*,Auto">
                   <TextBlock Grid.Column="0" Classes="primary" Text="{Binding Name}" Foreground="DarkOrange"/>
